[package]
name = "jotlog"
version = "0.1.0"
authors = ["Joe Ardent <code@ardent.nebcorp.com>"]
edition = "2018"
default-run = "jotlog-gui"

[dependencies]
chrono = "0.4"
clap = "2"
confy = "0.4"
diesel_migrations = "1"
diesel = { version = "1", features = ["sqlite"] }
lazy_static = "1"
mime = "0.3"
rand = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
time = "0.2"
uuid = { version = "*", default-features = false, features = ["v5", "v4"] }
iced = { version = "0.3", features = ["debug", "async-std"] }
async-std = "1"
