[package]
name = "jotlog"
version = "0.1.0"
authors = ["Joe Ardent <code@ardent.nebcorp.com>"]
edition = "2018"
default-run = "jotlog-gui"

[dependencies]
chrono = "0.4"
clap = "2"
confy = "0.4"
sqlx = { version = "0.5", features = [ "runtime-async-std-native-tls", "sqlite", "chrono", "bigdecimal" ] }
async-std = { version = "1", features = [ "attributes" ] }
lazy_static = "1"
mime = "0.3"
rand = "0.8"
regex = "1"
uuid = { version = "*", default-features = false, features = ["v5", "v4"] }
druid = { version = "*", path = "../druid/druid" }
druid-shell = { version = "0.7.0", default-features = false, path = "../druid/druid-shell" }
druid-derive = { version = "0.4.0", path = "../druid/druid-derive" }
pulldown-cmark = { version = "0.8", default-features = false }
open = "1.6"
