[package]
name = "joenal"
version = "0.1.0"
authors = ["Joe Ardent <code@ardent.nebcorp.com>"]
edition = "2018"
default-run = "joenal-gui"

[dependencies]
chrono = { version = "0.4", features = [ "clock", "std" ] }
clap = "2"
confy = "*"
sqlx = { version = "*", features = [ "runtime-async-std-native-tls", "sqlite", "chrono", "bigdecimal", "uuid" ] }
async-std = { version = "1", features = [ "attributes" ] }
lazy_static = "1"
mime = "0.3"
rand = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
uuid = { version = "*", default-features = false, features = ["v5", "v4"] }
druid = { version = "*", path = "../druid/druid", default-features = false, features = ["x11", "svg", "image", "png", "jpeg"]}
druid-shell = { version = "*", default-features = false, path = "../druid/druid-shell" }
druid-derive = { version = "*", path = "../druid/druid-derive" }
pulldown-cmark = { version = "0.8", default-features = false }
open = "1"
anyhow = "1"
