[package]
name = "importer"
version = "0.1.0"
authors = ["Joe Ardent <code@ardent.nebcorp.com>"]
edition = "2018"

[dependencies]
regex = "1"
clap = "2"
time = "*"
chrono = "*"
lazy_static = "*"
sha2 = "*"
diesel = { version = "*", features = ["sqlite"] }
diesel_codegen = { version = "*", features = ["sqlite"] }
dotenv = "*"