[package]
name = "importer"
version = "0.1.0"
authors = ["Joe Ardent <code@ardent.nebcorp.com>"]
edition = "2018"

[dependencies]
regex = "1"
clap = "2"
time = "*"
chrono = "*"
lazy_static = "*"
sha2 = "*"
diesel = { version = "1", features = ["sqlite"] }
dotenv = "*"
uuid = { version = "*", default-features = false, features = ["v5", "v4"] }
config = { version = "*", default-features = false, features = ["toml"] }
tui = "*"
sublime_fuzzy = "*"
rand = "*"
mime = "0.3.13"
