[package]
name = "jotlog-importer"
version = "0.1.0"
authors = ["Joe Ardent <code@ardent.nebcorp.com>"]
edition = "2018"

[dependencies]
regex = "1"
clap = "2"
time = "*"
chrono = "*"
lazy_static = "*"
diesel = { version = "1", features = ["sqlite"] }
diesel_migrations = "*"
dotenv = "*"
uuid = { version = "*", default-features = false, features = ["v5", "v4"] }
config = { version = "*", default-features = false, features = ["toml"] }
serde = { version = "1", features = ["derive"] }
confy = "*"

mime = "0.3.13"
